Various fixes/changes to code

--- a/SK_simulation_test.ipynb
+++ b/SK_simulation_test.ipynb
@@ -53,12 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rot1 = np.array([[1, 0, 0], [0, 0, -1], [0, 1, 0]])\n",
     "# rotate about z so that light injectors are in +y dir and tank axis remains +z dir\n",
     "theta = np.pi/2-np.arctan(768.14 / 1490.73)\n",
     "rot2 = np.array([[np.cos(theta), -np.sin(theta), 0], [np.sin(theta), np.cos(theta), 0], [0, 0, 1]])\n",
     "# rotate about x so that light injectors are in +z dir and tank axis is -y dir\n",
     "# (in image coords, +y is directed down)\n",
+    "rot1 = np.array([[1, 0, 0], [0, 0, -1], [0, 1, 0]])\n",
     "rot = np.matmul(rot1, rot2)\n",
     "camera_rotation = cv2.Rodrigues(rot)[0]\n",
     "camera_r = 1300.\n",
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "errors, true_translated, reco_transformed, scale, R, translation = fit.kabsch_errors(\n",
+    "errors, reco_transformed, scale, R, translation = fit.kabsch_errors(\n",
     "    pmt_locations, reco_locations)\n",
     "print(\"mean reconstruction error:\", linalg.norm(errors, axis=1).mean())\n",
     "print(\"max reconstruction error:\", linalg.norm(errors, axis=1).max())"
@@ -1054,12 +1054,13 @@
     }
    ],
    "source": [
+    "true_array = np.stack(list(common_feature_locations.values()))\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "ax.scatter(reco_transformed[:,0], reco_transformed[:,1], reco_transformed[:,2], marker='^', label=\"reco\")\n",
-    "ax.scatter(true_translated[:,0], true_translated[:,1], true_translated[:,2], marker='o', label=\"true\")\n",
+    "ax.scatter(true_array[:,0], true_array[:,1], true_array[:,2], marker='o', label=\"true\")\n",
     "for i, f in enumerate(pmt_locations.keys()):\n",
-    "    ax.text(true_translated[i,0], true_translated[i,1], true_translated[i,2], f, size=4, zorder=1, color='k') \n",
+    "    ax.text(true_array[i,0], true_array[i,1], true_array[i,2], f, size=4, zorder=1, color='k') \n",
     "ax.scatter(camera_positions[:,0], camera_positions[:,1], camera_positions[:,2], marker='*', label=\"camera\")\n",
     "plt.legend(loc=0)"
    ]
