Reorganize input and output files `results`: Output tables of camera and feature parameters `parameters`: Input PMT positions, calibration parameters, etc.

--- a/SK_demo_firstattempt.ipynb
+++ b/SK_demo_firstattempt.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_pmt_locations = fit.read_3d_feature_locations(\"SK_all_PMT_locations.txt\")\n",
+    "all_pmt_locations = fit.read_3d_feature_locations(\"parameters/SK_all_PMT_locations.txt\")\n",
     "image_feature_locations = {}\n",
     "image_feature_locations.update(fit.read_image_feature_locations(\"BarrelSurveyFar_TopInjector_Labeled/B2370344.txt\"))\n",
     "image_feature_locations.update(fit.read_image_feature_locations(\"BarrelSurveyFar_TopInjector_Labeled/B2380354.txt\"))\n",
@@ -7537,7 +7537,8 @@
     }
    ],
    "source": [
-    "fitter_all.save_result(\"SK_demo1_features.txt\", \"SK_demo1_cameras.txt\")"
+    "outputdir = \"results/\"\n",
+    "fitter_all.save_result(outputdir+\"SK_demo1_features.txt\", outputdir+\"SK_demo1_cameras.txt\")"
    ]
   },
   {
