Add IWCD PMT location files

--- a/IWCD_led_simulation.ipynb
+++ b/IWCD_led_simulation.ipynb
@@ -129,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "pmt_locations = fit.read_3d_feature_locations(\"IWCD_PMT_locations.txt\", delimiter=\" \")\n",
+    "pmt_locations = fit.read_3d_feature_locations(\"parameters/IWCD_PMT_locations.txt\", delimiter=\" \")\n",
     "mpmt_locations = {k: v for k, v in pmt_locations.items() if int(k)%19==0}\n",
     "mpmt_orientations = {k: np.array((0,-1,0)) if v[1]>290 else np.array((0,1,0)) if v[1]<-290 else np.array((-v[0],0,-v[2]))/np.sqrt(v[0]**2+v[2]**2) for k, v in mpmt_locations.items()}\n",
     "led_ring_radius = 24.\n",
