Clean up commented out code a bit

--- a/diagnostics/CenterPoint_Analysis.ipynb
+++ b/diagnostics/CenterPoint_Analysis.ipynb
@@ -100,14 +100,11 @@
     "        ax.plot(X,Y,Z,color='green')\n",
     "    \n",
     "    ax.text(expected_3D_dynode_centre[0],expected_3D_dynode_centre[1],expected_3D_dynode_centre[2], chosenPMT[:-3],size=8, zorder=4, color='k')\n",
-    "    #plotFile.write(str(reconstructed_3D_bolts_array))\n",
-    "    #printAverage = \"Average = \" + str(round(pmt_shift_distance,2))\n",
-    "    title = str(chosenPMT)+\", distance = \"+str(round(pmt_shift_distance,3))+\" px\"\n",
+    "    #title = str(chosenPMT)+\", distance = \"+str(round(pmt_shift_distance,3))+\" px\"\n",
     "    #print(str(chosenPMT)+\", distance = \"+str(round(pmt_shift_distance,3))+\" px\\n\")\n",
     "    #plt.title(title)\n",
     "    \n",
     "plt.legend(loc=0)\n",
-    "#fig.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -117,8 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nbins = round(len(pmt_shift_distance_array)/4)\n",
-    "max_y = len(pmt_shift_distance_array)/6"
+    "nbins = round(len(pmt_shift_distance_array)/4)"
    ]
   },
   {
@@ -134,8 +130,7 @@
     "plt.ylabel('Probability')\n",
     "printAverage = \"Average = \" + str(round(errorAverage,2))\n",
     "plt.title(printAverage)\n",
-    "#plt.xlim(0, 20)\n",
-    "#plt.ylim(0, max_y)\n",
+    "\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -161,8 +156,6 @@
     "plt.title(printAverage+\", \"+printSTD, size=30, wrap=True)\n",
     "\n",
     "plt.tick_params(axis='both', labelsize=20)\n",
-    "#plt.xlim(0, .25)\n",
-    "#plt.ylim(0, 5)\n",
     "plt.grid(True)\n",
     "plt.show()\n",
     "plt.savefig(\"error-x.png\")"
@@ -188,8 +181,6 @@
     "plt.title(printAverage+\", \"+printSTD, size=30, wrap=True)\n",
     "\n",
     "plt.tick_params(axis='both', labelsize=20)\n",
-    "#plt.xlim(0, .25)\n",
-    "#plt.ylim(0, 5)\n",
     "plt.grid(True)\n",
     "plt.show()\n",
     "plt.savefig(\"error-y.png\")"
@@ -215,8 +206,6 @@
     "plt.title(printAverage+\", \"+printSTD, size=30, wrap=True)\n",
     "\n",
     "plt.tick_params(axis='both', labelsize=20)\n",
-    "#plt.xlim(0, .25)\n",
-    "#plt.ylim(0, 5)\n",
     "plt.grid(True)\n",
     "plt.show()\n",
     "plt.savefig(\"error-z.png\")"
@@ -242,8 +231,6 @@
     "plt.title(printAverage+\", \"+printSTD, size=30, wrap=True)\n",
     "\n",
     "plt.tick_params(axis='both', labelsize=20)\n",
-    "#plt.xlim(0, .25)\n",
-    "#plt.ylim(0, 5)\n",
     "plt.grid(True)\n",
     "plt.show()\n",
     "plt.savefig(\"error-radial.png\")"
@@ -269,19 +256,10 @@
     "plt.title(printAverage+\", \"+printSTD, size=30, wrap=True)\n",
     "\n",
     "plt.tick_params(axis='both', labelsize=20)\n",
-    "#plt.xlim(0, .25)\n",
-    "#plt.ylim(0, 5)\n",
     "plt.grid(True)\n",
     "plt.show()\n",
     "plt.savefig(\"error-tangential.png\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
