Need to actually save NB if not re-running

--- a/SK_demo.ipynb
+++ b/SK_demo.ipynb
@@ -105,6 +105,14 @@
    "outputs": [],
    "source": [
     "all_pmt_locations = fit.read_3d_feature_locations(\"parameters/SK_all_PMT_locations.txt\")\n",
+    "\n",
+    "# Shift dynode position 15cm radially outward from geometry file position that corresponds to FRP flange/BS plane\n",
+    "pmt_dynode_offset = 15\n",
+    "for value in all_pmt_locations.values():\n",
+    "    phi = np.arctan2(value[1], value[0])\n",
+    "    value[0] = value[0] + pmt_dynode_offset * np.cos(phi)\n",
+    "    value[1] = value[1] + pmt_dynode_offset * np.sin(phi)\n",
+    "    \n",
     "offset = np.array([0, 250])\n",
     "image_feature_locations = {}\n",
     "image_feature_locations.update(fit.read_image_feature_locations(\"BarrelSurveyFar_TopInjector_PD3/BarrelSurveyFar_TopInjector_median_texts/045.txt\", offset=offset))\n",
@@ -4380,7 +4388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save results to txt file"
+    "## Save results to file"
    ]
   },
   {
@@ -4390,7 +4398,15 @@
    "outputs": [],
    "source": [
     "outputdir = \"results/\"\n",
-    "fitter_all.save_result(outputdir+\"SK_demo2_features.txt\", outputdir+\"SK_demo2_cameras.txt\")"
+    "fileroot = \"SK_demo5\"\n",
+    "\n",
+    "# For ROOT analysis\n",
+    "fitter_all.save_result(outputdir+fileroot+\"_features.txt\", outputdir+fileroot+\"_cameras.txt\")\n",
+    "\n",
+    "# For Python analysis\n",
+    "import pickle\n",
+    "with open(outputdir+fileroot+'.pkl', 'wb') as output:\n",
+    "    pickle.dump(fitter_all, output, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -13431,7 +13447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.2"
   },
   "pycharm": {
    "stem_cell": {
